--- a/lilygo.yaml
+++ b/lilygo.yaml
@@ -74,15 +74,15 @@ color:
 
 font:
   - file: "fonts/iosevka.ttf"
-    id: monaco_24
+    id: large_font
     size: 24
     glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
-    id: monaco_15
+    id: medium_font
     size: 15
     glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
-    id: monaco_14
+    id: small_font
     size: 14
     glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
     
@@ -95,6 +95,26 @@ globals:
     type: int
     restore_value: no
     initial_value: "-2"
+  - id: large_font_size
+    type: int
+    restore_value: no
+    initial_value: "24"
+  - id: medium_font_size
+    type: int
+    restore_value: no
+    initial_value: "15"
+  - id: small_font_size
+    type: int
+    restore_value: no
+    initial_value: "14"
+  - id: header_height
+    type: int
+    restore_value: no
+    initial_value: "16"
+  - id: margin_size
+    type: int
+    restore_value: no
+    initial_value: "4"
 
 custom_component:
 - lambda: |-
