--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -76,15 +76,15 @@ font:
   - file: "fonts/iosevka.ttf"
     id: large_font
     size: 24
-    glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
+    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
     id: medium_font
     size: 22
-    glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
+    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
     id: small_font
     size: 18
-    glyphs: '/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
+    glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
     
 globals:
   - id: charging
@@ -155,10 +155,11 @@ custom_component:
   id: light_group_component
 
 sensor:
-  - platform: template
-    id: rotary
-  - platform: template
+  - platform: adc
+    pin: 34
+    attenuation: auto
     name: "VBatt"
+    update_interval: 10s
     id: vcc_adc
     internal: true
     on_value:
@@ -309,6 +310,28 @@ time:
   - platform: homeassistant
     id: esptime
 
+light:
+  - platform: fastled_clockless
+    chipset: SK6812
+    pin: GPIO15
+    num_leds: 10
+    rgb_order: GRB
+    id: side_light
+    name: "Remote Light"
+    restore_mode: ALWAYS_OFF
+    default_transition_length: 0s
+    # on_turn_on:
+    # - switch.turn_on:
+    #     id: light_on
+    # on_turn_off:
+    # - switch.turn_off:
+    #     id: light_on
+    effects:
+      - addressable_rainbow:
+          name: Rainbow Effect
+          speed: 20
+          width: 30
+
 spi:
   clk_pin: 18
   mosi_pin: 23
@@ -324,6 +347,7 @@ display:
     id: my_display
     update_interval: 10s
     lambda: |-
+      manageLight();
       if (id(idle_time) < 0) {
         ESP_LOGD("drawing menu", "turning on");
         id(backlight).turn_on();
@@ -333,7 +357,6 @@ display:
         // id(my_display).set_update_interval(60000);
         return;
       }
-
       drawMenu();
       return;
       
