--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -7,6 +7,8 @@ esphome:
     - MenuTitle.h
     - esphomeRemotePlayer.h
     - esphomeRemoteService.h
+    - esphomeRemoteLight.h
+    - esphomeRemoteSensor.h
     - DisplayUpdateInterface.h
     - esphomeRemote.h
     - esphomeRemoteFire.h
@@ -33,6 +35,8 @@ ota:
 
 deep_sleep:
   id: deep_sleep_1
+  wakeup_pin: 39
+  wakeup_pin_mode: INVERT_WAKEUP
 
 color:
   - id: my_red
@@ -153,6 +157,18 @@ custom_component:
     App.register_component(lightGroup);
     return {lightGroup};
   id: light_group_component
+- lambda: |-
+    std::vector<FriendlyNameEntity> sensors { 
+      FriendlyNameEntity("sensor.current_time", ""),
+      FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
+      FriendlyNameEntity("sensor.vancouver_forecast", ""),
+      FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
+      FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture")
+    };
+    sensorGroup->setup(sensors);
+    App.register_component(sensorGroup);
+    return {sensorGroup};
+  id: sensor_group_component
 
 sensor:
   - platform: adc
