--- a/lilygo.yaml
+++ b/lilygo.yaml
@@ -125,6 +125,10 @@ globals:
     type: int
     restore_value: no
     initial_value: "6"
+  - id: bottom_bar_margin
+    type: int
+    restore_value: no
+    initial_value: "1"
 
 custom_component:
 - lambda: |-
