--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -1,7 +1,5 @@
 esphome:
-  name: fireremote
-  platform: ESP32
-  board: m5stack-fire
+  name: tdisplayt4
   includes:
     - esphomeRemote/MenuGlobals.h
     - esphomeRemote/MenuTitle.h
@@ -12,7 +10,22 @@ esphome:
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
     - esphomeRemote/esphomeRemote3Button.h
-    - esphomeRemote/esphomeRemoteFireLight.h
+
+esp32:
+  board: esp32dev
+  framework:
+    type: arduino
+
+# Enable logging
+logger:
+
+# Enable Home Assistant API
+api:
+  encryption:
+    key: !secret api_encryption
+
+ota:
+  password: !secret ota_encryption
 
 wifi:
   ssid: !secret wifi_ssid
@@ -26,18 +39,8 @@ wifi:
 
 captive_portal:
 
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
 deep_sleep:
   id: deep_sleep_1
-  wakeup_pin: 39
-  wakeup_pin_mode: INVERT_WAKEUP
 
 color:
   - id: my_red
@@ -80,15 +83,15 @@ color:
 font:
   - file: "fonts/iosevka.ttf"
     id: large_font
-    size: 28
+    size: 24
     glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
     id: medium_font
-    size: 22
+    size: 15
     glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
   - file: "fonts/iosevka.ttf"
     id: small_font
-    size: 18
+    size: 14
     glyphs: '*/\$#<>!"%()+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êé'''
 
 image:
@@ -169,7 +172,7 @@ globals:
   - id: boot_device_name
     type: std::string
     restore_value: no
-    initial_value: '"M5Stack Fire Remote <3"'
+    initial_value: '"T4 Remote <3"'
 
 custom_component:
 - lambda: |-
@@ -220,40 +223,8 @@ custom_component:
     App.register_component(sensorGroup);
     return {sensorGroup};
   id: sensor_group_component
-
+  
 sensor:
-  - platform: adc
-    pin: 34
-    attenuation: auto
-    name: "VBatt"
-    update_interval: 10s
-    id: vcc_adc
-    internal: true
-    on_value:
-      then:
-        lambda: |-
-          if (id(vcc_adc).state > 4) {
-            if (charging == false) {
-              charging = true;
-            }
-          } else {
-            if (charging == true) {
-              charging = false;
-            }
-            id(vcc_adc_avg).publish_state(id(vcc_adc).state);
-          }
-          
-  - platform: template
-    id: vcc_adc_avg
-    filters:
-      - sliding_window_moving_average:
-          window_size: 6
-          send_every: 6
-    on_value :
-      then:
-        - sensor.template.publish:
-            id: batteryVoltage
-            state: !lambda 'return ((id(vcc_adc).state) * 1.77);'
   - platform: template
     id: display_update_tick
     filters:
@@ -264,23 +235,6 @@ sensor:
             if(idleTime < 2) {
               displayUpdate.updateDisplay(true);
             }
-  - platform: template
-    name: batteryVoltage
-    id: batteryVoltage
-    internal: true
-    unit_of_measurement: 'V'
-    on_value :
-      then:
-        - sensor.template.publish:
-            id: TTGoBatteryPercent
-            state: !lambda 'return (((id(batteryVoltage).state - 3) * 100) / (3.7 - 3));'
-    on_value_range:
-      below: 2.5
-      then:
-        lambda: |-
-          ESP_LOGE("batteryVoltage", "Low Power Supply %.3fV! Sleeping to protect battery", id(batteryVoltage).state);
-          id(tt_sleep).turn_on();
-
   - platform: template
     name: Battery Percent
     id: TTGoBatteryPercent
@@ -297,27 +251,27 @@ binary_sensor:
     name: "Node Status"
     id: system_status
   - platform: gpio
-    id: M5_BtnA
-    pin:
-      number: 39
-      inverted: true
-    on_click:
-      then:
-        - lambda: |-
-            buttonPressLeft();
-  - platform: gpio
-    id: M5_BtnB
+    id: T4_BtnA
     pin:
       number: 38
       inverted: true
     on_click:
       then:
         - lambda: |-
-            buttonPressSelect();
+            buttonPressLeft();
   - platform: gpio
-    id: M5_BtnC
+    id: T4_BtnB
     pin:
       number: 37
+      inverted: true
+    on_click:
+      then:
+        - lambda: |-
+            buttonPressSelect();
+  - platform: gpio
+    id: T4_BtnC
+    pin:
+      number: 39
       inverted: true
     on_click:
       then:
@@ -326,6 +280,24 @@ binary_sensor:
 
 # We can still control the backlight independently
 switch:
+  - platform: gpio
+    pin:
+      number: 27
+      inverted: false
+    id: comb
+    internal: true
+  - platform: gpio
+    pin:
+      number: 26
+      inverted: false
+    id: coma
+    internal: true
+  - platform: gpio
+    pin: GPIO4
+    name: "Backlight"
+    id: backlight
+    internal: true
+    restore_mode: RESTORE_DEFAULT_ON
   - platform: template
     name: Sleep Toggle
     id: tt_sleep
@@ -335,57 +307,35 @@ switch:
       then:
         - deep_sleep.enter:
             id: deep_sleep_1
-  - platform: gpio
-    pin: 32
-    name: "Backlight"
-    id: backlight
-    restore_mode: ALWAYS_ON
 
 time:
   - platform: homeassistant
     id: esptime
 
-light:
-  - platform: fastled_clockless
-    chipset: SK6812
-    pin: GPIO15
-    num_leds: 10
-    rgb_order: GRB
-    id: side_light
-    name: "Remote Light"
-    restore_mode: ALWAYS_OFF
-    default_transition_length: 0s
-    effects:
-      - addressable_rainbow:
-          name: Rainbow Effect
-          speed: 20
-          width: 15
-
 spi:
   clk_pin: 18
+  miso_pin: 12
   mosi_pin: 23
-  miso_pin: 19
 
 display:
   - platform: ili9341
-    model: M5STACK
-    cs_pin: 14
-    dc_pin: 27
-    led_pin: 32  ### see note below ###
-    reset_pin: 33
     id: my_display
-    update_interval: 10s
+    model: TFT_2.4
+    cs_pin: 27
+    dc_pin: 32
+    led_pin: 04  ### see note below ###
+    reset_pin: 05
+    update_interval: 60s
     lambda: |-
-      manageLight();
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
         id(backlight).turn_on();
         idleTime = 0;
       } else if (!id(backlight).state) {
         ESP_LOGD("drawing menu", "turning off %d", idleTime);
-        // id(my_display).set_update_interval(60000);
+        id(my_display).set_update_interval(60000);
         return;
       }
+
       drawMenu();
       return;
-      
