show up to 10 lines on t4 now playing screen fix battery width and spacing

--- a/lilygo.yaml
+++ b/lilygo.yaml
@@ -163,6 +163,10 @@ globals:
     type: int
     restore_value: no
     initial_value: "12"
+  - id: now_playing_max_lines
+    type: int
+    restore_value: no
+    initial_value: "5"
   - id: draw_now_playing_menu
     type: bool
     restore_value: no
