add marquee for long text

--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -303,6 +303,10 @@ interval:
     then:
     - lambda: |-
         idleTick();
+  - interval: 0.3s
+    then:
+    - lambda: |-
+        activeTick();
 
 binary_sensor:
   - platform: status
